# ha-poolchem

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  README.md  hacs.json  pyproject.toml
custom_components/poolchem/: __init__.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  manifest.json  number.py  sensor.py
custom_components/poolchem/translations/: en.json
docs/: ARCHITECTURE.md  CHEMISTRY.md  CONFIGURATION.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALLATION.md  README.md  TROUBLESHOOTING.md
images/: icon_source.json
tests/: __init__.py  conftest.py  test_config_flow.py  test_coordinator.py  test_sensor.py
