[project]
name = "homeassistant-poolchem"
version = "0.1.0"
description = "Home Assistant custom integration for pool water chemistry analysis and dosing recommendations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "joyfulhouse" }
]
keywords = ["home-assistant", "pool", "chemistry", "water-balance", "dosing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
]

dependencies = [
    "pypoolchem>=0.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-homeassistant-custom-component>=0.13.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/joyfulhouse/homeassistant-poolchem"
Repository = "https://github.com/joyfulhouse/homeassistant-poolchem"
Issues = "https://github.com/joyfulhouse/homeassistant-poolchem/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["custom_components/poolchem"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
    "ERA",    # eradicate
    "ASYNC",  # flake8-async
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["custom_components.poolchem"]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001"]  # Fixtures are used by side-effect

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
# Cannot use strict mode with HA integrations - HA lacks type stubs
# so classes appear as Any and cannot be subclassed in strict mode
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
disallow_untyped_decorators = false
# HA classes appear as Any, allowing subclassing is required
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = [
    "homeassistant.*",
    "pytest_homeassistant_custom_component.*",
    "pypoolchem.*",
    "voluptuous",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
